Tags et page admin Ajout favoris Ajout table "lastversion" pour commencer à gérer les modifs de deck et les favoris